catalog-item-overlap-fix

--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -30,7 +30,8 @@
   margin: 0px;
   font-size: 1.7rem;
   display: flex;
-  gap: 10px;
+  flex-direction: column;
+  gap: 0px;
 }
 .game-desc-btns {
   display: flex;
@@ -112,7 +113,7 @@
 .catalog-game-tags{
   margin: 0px;
   display: inline-block;
-  margin-left: 20px;
+  margin-left: 0px;
   font-weight: 400;
   display: flex;
   align-items: center;
@@ -122,8 +123,8 @@
   margin-right: 7px;
   padding-left: 10px;
   padding-right: 10px;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  padding-top: 1px;
+  padding-bottom: 1px;
   border-radius: 12px;
   font-size: 15px;
 }
@@ -352,7 +353,7 @@
         cursor: pointer;
         font-family: "Jost", sans-serif;
       }
-
+      
       .game-desc-btns {
         display: flex;
         gap: 10px;
@@ -391,4 +392,5 @@
     margin-top: 0.5em;
     flex-wrap: wrap;
   }
+
 }
