--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -124,7 +124,7 @@
     overflow: hidden;
 }
 .catalog-item-img{
-    height: 70%;
+    height: 65%;
     aspect-ratio: 2.35;
     border-radius: 30px;
     object-fit:cover;
@@ -133,7 +133,8 @@
 .catalog-item-head{
     display: flex;
     position: relative;
-    height: 15%;
+    height: 20%;
+    width: 100%;
 }
 .catalog-item-end-div{
     display: flex;
@@ -206,11 +207,11 @@
     padding-top: 2px;
     padding-bottom: 2px;
     border-radius: 12px;
-    font-size: 15px;
+    font-size: 0.85rem;
 }
 .catalog-tag-rem{
     margin-right: 7px;
-    font-size: 15px;
+    font-size: 0.9rem;
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -311,7 +312,7 @@
         
     }
     .catalog-item-img{
-        height: 70%;
+        height: 65%;
         aspect-ratio: none;
         border-radius: 0px;
         object-fit:cover;
@@ -320,7 +321,7 @@
     .catalog-item-head{
         display: flex;
         position: relative;
-        height: 15%;
+        height: 20%;
         padding-left: 10px;
     }
     .catalog-item-end-div{
@@ -396,11 +397,11 @@
         padding-top: 2px;
         padding-bottom: 2px;
         border-radius: 12px;
-        font-size: 15px;
+        font-size: 0.85rem;
     }
     .catalog-tag-rem{
         margin-right: 7px;
-        font-size: 15px;
+        font-size: 0.9rem;
         display: flex;
         align-items: center;
         
